--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-.input {
+.input-content {
   width: 300px;
   height: 25px;
 }
@@ -38,7 +38,6 @@
 
 .total-list {
   margin-left: 0;
-  
 }
 
 .foot {
